{
    "name": "PG_PlayerInput",
    "maps": [
        {
            "name": "CharacterController",
            "id": "6db98065-dfb1-47e8-b9f0-fbcbc2a67624",
            "actions": [
                {
                    "name": "MoveHorizontal",
                    "type": "Value",
                    "id": "75a2fb4b-5fcf-41e9-b0de-4997c5482295",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveVertical",
                    "type": "Button",
                    "id": "6e818a53-bb1d-4f9a-9f7e-22958a733e4f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "738fb884-3abb-48d9-8be2-b8da72ad096b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "3f4f972d-1533-48c8-9c6a-524d020c29ab",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "85972c9d-e405-4925-b272-7ede89c73e7e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ef506531-c318-4826-b5b5-9681105d8bd8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "31f5f91d-8eb8-4b35-9b28-92e31bd00605",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "eb068723-a711-4901-9a11-dd1c2f976fc4",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "051b3fe7-be70-4b56-bf74-a32b45e7e097",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveHorizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "f21efc80-5036-45e3-97ad-619c0b797a7b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "90efbfa9-7047-4633-b82b-64f043b8d46d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "66560b09-c678-4a7c-926c-e11ba49df078",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "eca06080-0f10-4153-be3f-4c1d9062f40e",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "6b27f132-908c-418d-8909-96afcf14d593",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "9cffd68d-4f53-4660-b500-88284d39cfec",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveVertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "90934ae4-e745-4f7a-a560-955c9a402fed",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b0d094b-b448-4e00-b0c9-5197980fa1d9",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraMovement",
            "id": "f91ac92b-6657-4252-9025-ed127aab7e27",
            "actions": [
                {
                    "name": "XMovement",
                    "type": "Value",
                    "id": "393639c8-d26d-4658-a7cb-c4bd7800a7d5",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "YMovement",
                    "type": "Value",
                    "id": "cf3e0bc8-7611-4c72-bdbf-5281f7206ec2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Mouse",
                    "id": "dda792f5-286f-46d8-9df9-44e0174ee212",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=0.1)",
                    "groups": "",
                    "action": "XMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "47fd91e2-59bb-491d-81ae-8bc0f0c5cf8d",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "136e8097-3acf-4fa4-becb-a196a9cb21f5",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Stick",
                    "id": "4b277e56-5413-4cfd-ba8e-48dd378f2d02",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "XMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "6f7e58ba-8a42-4402-a8d9-4845a4e5434e",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "31bd9704-1d18-4321-bf42-3deadd5358df",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "XMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Mouse",
                    "id": "e7e17588-de94-45d6-8a98-67609044ec43",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=0.1)",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "5beb4ff7-4e76-464d-9de6-69677154b49b",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "3412af3b-f4c7-4432-ac0e-812e7677dee1",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Stick",
                    "id": "0d28f6c6-9322-405e-bc1e-15ef234d4577",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "Scale(factor=4)",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "49e03c88-bbda-48d1-bea3-1579be28dfde",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "ae9df021-c024-4157-ac6b-ed7015a70824",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "YMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}